# epgstation-batch-encoder

./: Cargo.toml
src/: main.rs
src/encoder/: mod.rs  model.rs
src/epg_station_api/: api.rs  mod.rs  model.rs
src/ffmpeg_wrap/: mod.rs  model.rs
