[package]
name = "auto-encode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
ffmpeg-cli = "0.1.0"
ffprobe = "0.3.3"
futures-util = "0.3.30"
indicatif = "0.17.7"
reqwest = { version = "0.11.24", features = ["json", "stream", "multipart"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync"] }
tokio-util = { version = "0.7.10", features = ["io"] }
